--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 Coursera/Crash Course on Python by Google/Week 6 - Writing Scripting from the Ground Up/Corat-cret.ipynb
+Udemy/100 Days Python Learning/D08 - Function-Parameter & Caesar Cypher/__pycache__/art.cpython-310.pyc
