--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Coursera/Google IT Automation with Python Specialization/Week 6 - Writing Scripting from the Ground Up/Corat-cret.ipynb
 Udemy/100 Days Python Learning/D08 - Function-Parameter & Caesar Cypher/__pycache__/art.cpython-310.pyc
+.ipynb_checkpoints/.gitignore-checkpoint
