Target: Local -> Py-Learn [beta]
OS: MAC
app: Jupyter
notes: ngerjain practice

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Coursera/Google IT Automation with Python Specialization/Week 6 - Writing Script
 Udemy/100 Days Python Learning/D08 - Function-Parameter & Caesar Cypher/__pycache__/art.cpython-310.pyc
 .ipynb_checkpoints/.gitignore-checkpoint
 .vscode/settings.json
+Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/guests.txt
