--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Udemy/100 Days Python Learning/D08 - Function-Parameter & Caesar Cypher/__pycach
 .ipynb_checkpoints/.gitignore-checkpoint
 .vscode/settings.json
 Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/guests.txt
+Udemy/100 Days Python Learning/D09 - Dictionary, Nesting & Secret Auction/__pycache__/art.cpython-310.pyc
