--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Udemy/100 Days Python Learning/D08 - Function-Parameter & Caesar Cypher/__pycach
 Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/guests.txt
 Udemy/100 Days Python Learning/D09 - Dictionary, Nesting & Secret Auction/__pycache__/art.cpython-310.pyc
 **/*.cpython-39..pyc
+Udemy/100 Days Python Learning/D08 - Function-Parameter & Caesar Cypher/.ipynb_checkpoints/D08-1-Function-Parameter-Argument-checkpoint.ipynb
