adding checkpoints to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Udemy/100 Days Python Learning/D09 - Dictionary, Nesting & Secret Auction/__pyca
 **/*.cpython-39..pyc
 Udemy/100 Days Python Learning/D08 - Function-Parameter & Caesar Cypher/.ipynb_checkpoints/D08-1-Function-Parameter-Argument-checkpoint.ipynb
 Coursera/Google IT Automation with Python Specialization/1 - Crash Course on Python by Google/Week 5 - Object Oriented Programming/.ipynb_checkpoints/5_3 Code Reuse - 2 Composition-checkpoint.ipynb
+**/checkpoint*
