refactoring gitignore extension

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 Coursera/Google IT Automation with Python Specialization/Week 6 - Writing Scripting from the Ground Up/Corat-cret.ipynb
-Udemy/100 Days Python Learning/D08 - Function-Parameter & Caesar Cypher/__pycache__/art.cpython-310.pyc
-.ipynb_checkpoints/.gitignore-checkpoint
 .vscode/settings.json
 Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/guests.txt
-Udemy/100 Days Python Learning/D09 - Dictionary, Nesting & Secret Auction/__pycache__/art.cpython-310.pyc
 **/*.cpython-39..pyc
-Udemy/100 Days Python Learning/D08 - Function-Parameter & Caesar Cypher/.ipynb_checkpoints/D08-1-Function-Parameter-Argument-checkpoint.ipynb
-Coursera/Google IT Automation with Python Specialization/1 - Crash Course on Python by Google/Week 5 - Object Oriented Programming/.ipynb_checkpoints/5_3 Code Reuse - 2 Composition-checkpoint.ipynb
+**/*.cpython-310.pyc
 **/checkpoint*
