--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-Udemy/100 Days Python Learning/D10 - Functions with output/.ipynb_checkpoints/D10-5-Calculator Part 2-checkpoint.ipynb
+**/*.cpython-39..pyc
+**/*.cpython-310.pyc
+**/.ipynb_checkpoints
