--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Coursera/Google IT Automation with Python Specialization/2 - Python to Interact 
 **/*.cpython-39..pyc
 **/*.cpython-310.pyc
 **/.ipynb_checkpoints
+**/workspace.xml
